feat: update project configuration and security settings
- Enhanced `.gitignore` to include environment variable files.
- Added workspace configuration for the Spring Boot demo.
- Created KeycloakAuth collection configuration.
- Renamed artifact and project name in `pom.xml` for clarity.
- Updated realm name in `chopper.json` for consistency.
- Refined `SecurityConfig` to improve CORS handling and JWT role extraction.
- Adjusted `application.yaml` to streamline Keycloak resource server settings.